# distributed-system-framework

./: .editorconfig  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchmark.sh  build.sh  readme.md  source.list
client/: CMakeLists.txt  main.cpp  makefile  public.h  s  selectSerThread.cpp  system.cpp  system.h  tcpConnect.cpp  workSer.h
client/include/: informationCollectorServerThread.h  public.h  selectSerThread.h  tcpConnect.h  tcpServer.h  transfer.h  worker.h
client/src/: informationCollectorServerThread.cpp  main.cpp  subModule.cpp  system.cpp  transfer.cpp  workSer.cpp  worker.cpp
config/: mysql.cfg
doc/: main.sql
docs/: command.md
include/client/: informationCollectorServerThread.h  public.h  subModule.h  system.h  tcpConnect.h
include/controller/: controller.h
include/db/: db.h
include/dbConnectionPool/: connection.h
include/loadBalanceServer/: HashFunction.h  LoadBalanceServer.h  VirtualNode.h  loadBalanceServer.h  public.h  tcpServer.h
include/logger/: logger.h  message.h  public.h  timeStamp.h
include/mainServer/: mainServer.h
include/mysqldb/: mysqldb.h
include/reactor/: reactor.h
include/redis/: redis.h
include/server/: controller.h  public.h  server.h  tcpClient.h  thread.h  threadPool.h  view.h
include/thread/: thread.h
include/threadPool/: threadPool.h
include/utils/: ipAddressPort.h  msg.h  tcpClient.h  tcpServer.h
include/view/: view.h
informationCollector/: cli.cpp  makefile
informationCollector/src/: informationCollecorClient.cpp  informationCollectorClient.cpp
lb_server/: lb.cpp  lb.h  main.cpp  makefile  tcpServer.cpp  tcpServer.h
loadBalanceServer/: core  loadBalanceServer.cpp  loadBalanceServer.h  main  main.cpp  makefile  readme.md
loadBalanceServer/src/: loadBalanceServer.cpp
resource/: user.sql
server/: CMakeLists.txt  control.cpp  control.h  main.cpp  makefile  mthread.cpp  mthread.h  public.h  sql.cpp  sql.h  tcpConnect.cpp  tcpServer.cpp  tcpServer.h  threadPool.cpp  threadPool.h  view.cpp  view.h
server/include/: public.h  tcpClient.h  tcpServer.h  thread.h  threadPool.h  view.h
server/src/: CMakeLists.txt  controller.cpp  server.cpp  tcpServer.cpp  thread.cpp  (+1 more)
src/: CMakeLists.txt  main.cc
src/client/: CMakeLists.txt  informationCollectorServerThread.cpp  main.cpp  subModule.cpp  system.cpp  tcpServer.cpp  transfer.cpp
src/controller/: controller.cc
src/db/: CMakeLists.txt  db.cpp
src/informationCollector/: CMakeLists.txt  informationCollectorClient.cpp
src/loadBalanceServer/: CMakeLists.txt  ConsistentHashCircle.cpp  HashFunction.cpp  LoadBalanceServer.cpp  PysicalNode.cpp  loadBalanceServer.cpp  tcpServer.cpp
src/logger/: logger.cc  message.cc  timeStamp.cc
src/mainServer/: mainServer.cc
src/mysqldb/: mysqldb.cc
src/reactor/: reactor.cc
src/redis/: redis.cc
src/server/: CMakeLists.txt  controller.cpp  main.cpp  mainServer.cpp  tcpClient.cpp  thread.cpp  threadPool.cpp  view.cpp
src/server/dbConnectionPool/: Connection.cpp  dbConnectionPool.cpp
src/thread/: thread.cc
src/threadPool/: threadPool.cc
src/utils/: ipAddressPort.cc  tcpClient.cc  tcpServer.cc
src/view/: view.cc
v1/: CMakeLists.txt  Dockerfile  README.md
(+28 files in other folders)
